apps/home/base/zigbee2MQTT/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zigbee2mqtt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zigbee2mqtt
  template:
    metadata:
      labels:
        app: zigbee2mqtt
    spec:
      containers:
        - name: zigbee2mqtt
          image: koenkk/zigbee2mqtt
          ports:
            - containerPort: 8080
              name: ui
          volumeMounts:
            - name: device
              mountPath: /dev/ttyACM0
            - name: zigbee2mqtt-data
              mountPath: /app/data
          securityContext:
            privileged: true
          resources: {}
      volumes:
        - name: device
          hostPath:
            path: /dev/serial/by-id/usb-Texas_Instruments_TI_CC2531_USB_CDC___0X00124B0018ED3DDF-if00 # TODO: Adjust this to the desired path on your host
            type: CharDevice
        - name: zigbee2mqtt-data
          persistentVolumeClaim:
            claimName: zigbee2mqtt
        - name: default-data
          configMap:
            name: zigbee2mqtt-defaults
      hostNetwork: true
