apps/home/base/zigbee2MQTT/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zigbee2mqtt
spec:
  selector:
    app: zigbee2mqtt
  ports:
    - port: 80
      targetPort: ui
