apps/home/base/zigbee2MQTT/http-route.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: zigbee2mqtt
spec:
  parentRefs:
    - kind: Gateway
      name: http
      namespace: kube-system
  hostnames:
    - zigbee2mqtt.dudo.dev
  rules:
    - backendRefs:
        - name: zigbee2mqtt
          port: 8080
